# ardature

./: .gitignore  GAME_SPEC.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.node.json
.github/workflows/: deploy.yml
docs/: README.md  app-architecture.md  gameplay-turns-v1.md  map-sandbox-v1.md  setup-draft-sync-v1.md  troop-allocation-v1.md
maps/: README.md  TERRITORY_KEY.md  territory-key.md
maps/geometry/: map.json  regions.json  territories.json
public/: manifest.webmanifest  sw.js
public/caradhras-pass/: preview.html
public/challenge/open-pigeon/arrow/: scene.gltf
public/challenge/open-pigeon/bow/: bowready.fbx
scripts/: calibrate-challenge.mjs  extract-map.ps1  plot_challenge_distance.py  verify-ui.mjs
src/: App.tsx  main.tsx  styles.css
src/app/: useLocalPauseRecovery.ts
src/game/: armyBuild.ts  combat.ts  gameState.ts  gameTypes.ts  gameView.ts  mapGraph.ts  notificationText.ts  playerColors.ts  setupPreferences.ts  setupUtils.ts  troopIcons.tsx
src/map/: mapPreferences.ts  mapTypes.ts  territoryLookup.ts
src/map/components/: HitTargetLayer.tsx  MapView.tsx  MapWeatherLayer.tsx  SkinPicker.tsx  StaticMapInk.tsx  TerritoryFillLayer.tsx  TroopMarkerLayer.tsx
src/sync/: QrCodeUi.tsx  syncErrors.ts  syncMessages.ts  syncTransport.ts
src/ui/: ArmyBuildModal.tsx  BattleModal.tsx  ChallengeTestPage.tsx  FormControls.tsx  GameSections.tsx  Overlays.tsx  PausePanel.tsx  PlayerChrome.tsx  SetupPanels.tsx  SyncSessionBlocker.tsx  TroopControls.tsx
